--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-    "engines": {
+  "engines": {
     "node": "12.x"
   },
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "start": "nodemon index.ts",
-    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules src/server.ts",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.15.7",
+    "@babel/runtime": "^7.15.4",
     "@types/lodash": "^4.14.172",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -31,6 +33,12 @@
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-decorators": "^7.15.4",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
+    "@babel/register": "^7.15.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
