--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "startOld": "node dist/index.js",
+    "start": "nodemon src/index.ts",
     "test": "jest"
   },
   "keywords": [],
