--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.29.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
+    "nodemon": "^2.0.12",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
