--- a/package.json
+++ b/package.json
@@ -22,27 +22,27 @@
   "dependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/runtime": "^7.15.4",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash": "^4.14.172",
+    "@types/node": "^16.6.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "nodemon": "^2.0.12",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
     "swagger-ui-express": "^4.1.6",
-
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/node": "^16.6.1",
-    "@types/swagger-ui-express": "^4.1.3",
-    "nodemon": "^2.0.12",
     "ts-node": "^10.2.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
