--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.5",
     "sequelize-typescript": "^2.1.0",
+    "superagent": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5",
