--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "private": true,
   "engines": {
     "node": "12.x",
     "npm": "6.x",
-    "nodemon": "2.x",
     "yarn": "1.x"
   },
   "scripts": {
-    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
-    "startOld": "node dist/index.js",
-    "start": "nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "test": "jest"
   },
   "keywords": [],
