--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
+    "build": "rm -rf dist && tsc",
     "test": "jest"
   },
   "keywords": [],
