--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "mustache": "^4.2.0",
     "nodemon": "^2.0.12",
+    "pdfmake": "^0.2.4",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
@@ -54,8 +56,11 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/mustache": "^4.1.2",
     "@types/node": "^16.6.1",
+    "@types/pdfmake": "^0.1.21",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
