--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.6.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "aws-sdk": "^2.1101.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
