--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mustache": "^4.2.0",
@@ -56,6 +57,7 @@
     "@babel/register": "^7.15.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/json2csv": "^5.0.3",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mustache": "^4.1.2",
     "@types/node": "^16.6.1",
